Do more enhancements and fixes

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,8 @@ kotlinxSerializationVersion=1.0.1
 ktlintVersion=9.4.1
 
 baseVersion=0.8.3
+
+projectRepoUrl=https://github.com/Kotlin/kotlin-jupyter
+
+bintray_user_org=ileasile
+buntray_repo=kotlin-datascience-ileasile
