Add publishing plugin to avoid copy&paste
Refactor magics handling to allow overriding

Upgrade Gradle to 6.7.1

Extract more things to compiler artifact

Upgrade Kotlin version

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,9 @@ jvmTarget=1.8
 shadowJarVersion=5.2.0
 kotlinxSerializationVersion=1.0.1
 ktlintVersion=9.4.1
+junitVersion=5.6.2
+slf4jVersion=1.7.30
+khttpVersion=1.0.0
 
 baseVersion=0.8.3
 
