Add workaround for dokka issue

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,6 @@ projectRepoUrl=https://github.com/Kotlin/kotlin-jupyter
 
 bintray_user_org=ileasile
 bintray_repo=kotlin-datascience-ileasile
+
+# Workaround for https://github.com/Kotlin/dokka/issues/1405
+org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m -Xmx2048m
