--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,12 @@ jvmTarget=1.8
 
 shadowJarVersion=5.2.0
 kotlinxSerializationVersion=1.0.1
-ktlintVersion=9.4.1
+ktlintGradleVersion=9.4.1
+ktlintVersion=0.40.0
 junitVersion=5.6.2
 slf4jVersion=1.7.30
 khttpVersion=1.0.0
+artifactsPath=build/artifacts
 
 baseVersion=0.8.3
 
